--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -10,11 +10,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Cog
         uses: replicate/setup-cog@v1
         with:
           token: ${{ secrets.REPLICATE_TOKEN }}
+          install-cuda: false
 
       - name: Download plugins
         run: cog run scripts/clone_plugins.sh
