--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -6,9 +6,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 512
+          swap-size-mb: 1024
+          remove-dotnet: 'true'
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Setup Cog
