--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -11,7 +11,13 @@ jobs:
     steps:
       - name: Maximize build space
         uses: AdityaGarg8/remove-unwanted-software@v3
-
+        with:
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
+          remove-large-packages: 'true'
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Setup Cog
