modify workflow to build docker image

--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Download plugins
         run: cog run scripts/clone_plugins.sh
 
+      - name: Build Docker Image
+        run: cog build -t comfyui-runner
+
       - name: Push to Replicate
         run: cog push r8.im/joe-aivatarz/comfyui-runner
