--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -26,7 +26,7 @@ jobs:
           token: ${{ secrets.REPLICATE_TOKEN }}
           install-cuda: false
       - name: Build Docker Image
-        run: cog build -t comfyui-runner
+        run: cog build -t joe-aivatarz/comfyui-runner
       - name: Download plugins
         run: cog run scripts/clone_plugins.sh
       - name: Push to Replicate
