--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -28,8 +28,12 @@ jobs:
           token: ${{ secrets.REPLICATE_TOKEN }}
           install-cuda: false
           cog-version: "v0.8.6"
-#      - name: Build Docker Image
-#        run: cog build -t joe-aivatarz/comfyui-runner
+      - name: Directories
+        run: pwd
+      - name: List Directories
+        run: ls
+      - name: Build Docker Image
+        run: cog build -t joe-aivatarz/comfyui-runner:latest
 #      - name: Download plugins
 #        run: cog run scripts/clone_plugins.sh
       - name: Push to Replicate
