--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -30,10 +30,8 @@ jobs:
           cog-version: "v0.9.5"
       - name: Download plugins
         run: scripts/clone_plugins.sh
-      - name: List Directories
-        run: ls
-      - name: Build Docker Image
-        run: cog build -t joe-aivatarz/comfyui-runner:latest
+#      - name: Build Docker Image
+#        run: cog build -t joe-aivatarz/comfyui-runner
 #      - name: Download plugins
 #        run: cog run scripts/clone_plugins.sh
       - name: Push to Replicate
