--- a/.github/workflows/replicate.yml
+++ b/.github/workflows/replicate.yml
@@ -27,10 +27,10 @@ jobs:
           token: ${{ secrets.REPLICATE_TOKEN }}
           install-cuda: false
           cog-version: "v0.9.6"
-      - name: Download plugins
-        run: scripts/clone_plugins.sh
-      - name: Build Docker Image
-        run: cog build -t joe-aivatarz/comfyui-runner:latest
+#      - name: Download plugins
+#        run: scripts/clone_plugins.sh
+#      - name: Build Docker Image
+#        run: cog build -t joe-aivatarz/comfyui-runner:latest
 #      - name: Download plugins
 #        run: cog run scripts/clone_plugins.sh
       - name: Push to Replicate
